--- a/exercise/src/App.css
+++ b/exercise/src/App.css
@@ -4,6 +4,18 @@ body {
   text-align: center;
 }
 
+table {
+  margin-top: 20px;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
 
 .nav {
   padding: 10px 0px;
